Port With Products x 1 Sync to Git

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -7,7 +7,26 @@
 <script src="https://www.dwin1.com/19038.js" type="text/javascript" defer="defer"></script>
 {{ '//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css' | stylesheet_tag }}
 <head>
-<!-- Global site tag (gtag.js) - Google Ads: 780794742 --> <script async src="https://www.googletagmanager.com/gtag/js?id=AW-780794742"></script> <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'AW-780794742'); </script>
+  
+<!-- Google Tag Manager - Installed 4/22/2022 by Fat Earth -->
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-5NH4RCV');</script>
+<!-- End Google Tag Manager -->
+<!-- End of Google Tag Manager - Installed 4/22/2022 by Fat Earth -->
+  
+  
+  
+  
+<!-- Global site tag (gtag.js) - Google Ads: 780794742 -->
+
+  <script async src="https://www.googletagmanager.com/gtag/js?id=AW-780794742"></script> <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'AW-780794742'); </script>
+
+
+
 <!-- End Google Tag Manager -->
 <meta name="facebook-domain-verification" content="mo4rbu71wtgu9f4cigw5403jbogfic" />
 <meta name="google-site-verification" content="jXHP3v15J17cFUFugBHG98a5Ab80RCUtCEXPYDMVgGw" />
