--- a/sections/collection-shop.liquid
+++ b/sections/collection-shop.liquid
@@ -86,7 +86,9 @@
 <div data-section-id="{{ section.id }}" data-section-type="parallax">
   <div class="collection sidebar--hidden" data-sidebar-toggle>    
     <div class="wrapper">        
-      
+      <div class="ev-shop-hero" >
+      Hello World
+      </ div>
       <div class="collection__heading--below">        
         {%- if section.settings.show_title -%}
         <h1 class="collection__heading--below title--flex {{ section.settings.align_text }}">{{ collection.title }}</h1>
