--- a/sections/collection-shop.liquid
+++ b/sections/collection-shop.liquid
@@ -87,7 +87,7 @@
   <div class="collection sidebar--hidden" data-sidebar-toggle>    
     <div class="wrapper">        
       <div class="ev-shop-hero" >
-      Hello World FOO BAR
+      <img src="{{ 'shop-hero-2.png' | asset_img_url: }}" alt="woman lounging" >
       </ div>
       <div class="collection__heading--below">        
         {%- if section.settings.show_title -%}
