--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -8396,11 +8396,13 @@ a#header-wishlist {
 
 div.ev-shop-hero img {
   width: 100%;
+  position: relative;
+  top: 30%
 }
 
 div.ev-shop-hero {
   overflow: hidden;
-  height: 200px;
+  height: 350px;
 }
 
 
