--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -8397,7 +8397,7 @@ a#header-wishlist {
 div.ev-shop-hero img {
   width: 100%;
   position: relative;
-  top: -30%;
+  top: calc(-50% + 175px);
 }
 
 div.ev-shop-hero {
