absolute to the bottom

--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -8394,15 +8394,16 @@ a#header-wishlist {
 
 /* shop page */
 
-div.ev-shop-hero img {
-  width: 100%;
-  position: relative;
-  bottom: 0px;
-}
-
 div.ev-shop-hero {
   overflow: hidden;
+  position: relative;
   height: 350px;
+}
+
+div.ev-shop-hero img {
+  width: 100%;
+  position: absolute;
+  bottom: 0px;
 }
 
 
