--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -8403,7 +8403,12 @@ div.ev-shop-hero {
 div.ev-shop-hero img {
   width: 100%;
   position: absolute;
-  bottom: 0px;
+  @media only screen and (max-width: 850px) {
+    bottom: 0px;
+  }
+  @media only screen and (min-width: 850px) {
+    bottom:3%;
+  }
 }
 
 
