--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -8407,7 +8407,10 @@ div.ev-shop-hero img {
     bottom: 0px;
   }
   @media only screen and (min-width: 850px) {
-    bottom:3%;
+    bottom:-100px;
+  }
+  @media only screen and (min-width: 1160px) {
+    bottom:-200px;
   }
 }
 
