--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -8406,7 +8406,7 @@ div.ev-shop-hero img {
   @media only screen and (max-width: 850px) {
     bottom: 0px;
   }
-  @media only screen and (min-width: 850px) {
+  @media only screen and (max-width: 1160px) {
     bottom:-100px;
   }
   @media only screen and (min-width: 1160px) {
