--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -8409,8 +8409,11 @@ div.ev-shop-hero img {
   @media only screen and (max-width: 1160px) {
     bottom:-100px;
   }
-  @media only screen and (min-width: 1160px) {
+  @media only screen and (max-width: 1450px) {
     bottom:-200px;
+  }
+  @media only screen and (min-width: 1450px) {
+    bottom:-350px;
   }
 }
 
