Removed Smile & Subscribe It

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -192,7 +192,5 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <!-- CleverApp END --> 
 {% include 'giftship' %}   
   
- {% include 'smile-initializer' %}
-
-{% include 'subscribe-it-helper' %}</body>
+</body>
 </html>
