--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -8397,7 +8397,7 @@ a#header-wishlist {
 div.ev-shop-hero {
   overflow: hidden;
   position: relative;
-  height: 450px;
+  max-height: 450px;
 }
 
 div.ev-shop-hero img {
