Very narrow screens

--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -8398,6 +8398,9 @@ div.ev-shop-hero {
   overflow: hidden;
   position: relative;
   height: 450px;
+  @media only screen and (max-width: 850px) {
+    height: 250px;
+  }
 }
 
 div.ev-shop-hero img {
