--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -8401,6 +8401,9 @@ div.ev-shop-hero {
   @media only screen and (max-width: 850px) {
     height: 250px;
   }
+  @media only screen and (max-width: 400px) {
+    height: 150px;
+  }
 }
 
 div.ev-shop-hero img {
