Remove some narrow formatting

--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -8399,7 +8399,7 @@ div.ev-shop-hero {
   position: relative;
   height: 550px;
   @media only screen and (max-width: 850px) {
-    height: 250px;
+/*    height: 250px; */
   }
   @media only screen and (max-width: 400px) {
     height: 150px;
