--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -8402,7 +8402,7 @@ div.ev-shop-hero {
 /*    height: 250px; */
   }
   @media only screen and (max-width: 400px) {
-    height: 150px;
+/*    height: 150px; */
   }
 }
 
