Test flexible height under 800px

--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -8398,8 +8398,12 @@ div.ev-shop-hero {
   overflow: hidden;
   position: relative;
   height: 550px;
-  @media only screen and (max-width: 850px) {
+  @media only screen and (max-width: 800px) {
 /*    height: 250px; */
+  border: 1px solid red;
+  width: 100%;
+  padding: 40%;
+  box-sizing: border-box;
   }
   @media only screen and (max-width: 400px) {
 /*    height: 150px; */
