Height auto under 800

--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -8399,11 +8399,7 @@ div.ev-shop-hero {
   position: relative;
   height: 550px;
   @media only screen and (max-width: 800px) {
-/*    height: 250px; */
-  border: 1px solid red;
-  width: 100%;
-  padding: 40%;
-  box-sizing: border-box;
+  height: auto;
   }
   @media only screen and (max-width: 400px) {
 /*    height: 150px; */
@@ -8424,6 +8420,9 @@ div.ev-shop-hero img {
   }
   @media only screen and (max-width: 850px) {
     bottom: -15px;
+  }
+  @media only screen and (max-width: 800px) {
+    bottom: 0px;
   }
 }
 
