Pos: relative under 800

--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -8422,6 +8422,7 @@ div.ev-shop-hero img {
     bottom: -15px;
   }
   @media only screen and (max-width: 800px) {
+    position:relative;
     bottom: 0px;
   }
 }
