--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -8340,6 +8340,10 @@ div[id^=webyze-product-colors]::before {
 .grid__item_frame {  
   overflow: hidden;  
 }
+
+.webyzeProductColors {
+  margin: 10px 0;
+}
 /* product page fixes */
 #productInfo-product span.title.text-larger {
   font-size: 2rem;  
