Force swatch position

--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -8342,7 +8342,7 @@ div[id^=webyze-product-colors]::before {
 }
 
 .webyzeProductColors {
-  margin: 10px 0;
+  margin: 10px 0 !important;
 }
 /* product page fixes */
 #productInfo-product span.title.text-larger {
