--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -8342,7 +8342,8 @@ div[id^=webyze-product-colors]::before {
 }
 
 .webyzeProductColors {
-  margin: 10px 0 !important;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 /* product page fixes */
 #productInfo-product span.title.text-larger {
