--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -8342,8 +8342,8 @@ div[id^=webyze-product-colors]::before {
 }
 
 .webyzeProductColors {
-  margin-top: 10px;
-  margin-bottom: 10px;
+  margin-top: 10px !important;
+  margin-bottom: 10px !important;
 }
 /* product page fixes */
 #productInfo-product span.title.text-larger {
