--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -5995,6 +5995,9 @@ label.quatity-selector{
    justify-content: center;
 }
 
+.cbb-frequently-bought-container {
+  max-width: 1180px;
+}
 .cbb-frequently-bought-selector-list input {
 	height: 15px !important;
     width: 15px !important;
