--- a/sections/collection-shop.liquid
+++ b/sections/collection-shop.liquid
@@ -275,18 +275,43 @@
                         {%- assign grid_width_medium = 'medium--one-quarter' -%}
                         {%- assign grid_width_small = 'small--one-half' -%}  
                     
-                      {%- assign handle = block.settings.shop_product41 -%}
+                    	{%- assign handle = block.settings.shop_product41 -%}
+                      {% for product in collections.shop.products %}
+                          {% if product.handle == handle %}
+                            {% assign product = product %}
+                          {% endif %}
+                        {% endfor %}
                       {%- assign feature_image = block.settings.shop_img41 -%}
                         {% include 'custom-collection-grid-item' %}
                         {%- assign handle = block.settings.shop_product42 -%}
+                      {% for product in collections.shop.products %}
+                          {% if product.handle == handle %}
+                            {% assign product = product %}
+                          {% endif %}
+                        {% endfor %}
                       {%- assign feature_image = block.settings.shop_img42 -%}
+                      {% for product in collections.shop.products %}
+                          {% if product.handle == handle %}
+                            {% assign product = product %}
+                          {% endif %}
+                        {% endfor %}
                         {% include 'custom-collection-grid-item' %}
                         {%- assign handle = block.settings.shop_product43 -%}
+                      {% for product in collections.shop.products %}
+                          {% if product.handle == handle %}
+                            {% assign product = product %}
+                          {% endif %}
+                        {% endfor %}
                       {%- assign feature_image = block.settings.shop_img43 -%}
                         {% include 'custom-collection-grid-item' %}
                         {%- assign handle = block.settings.shop_product44 -%}
+                      {% for product in collections.shop.products %}
+                          {% if product.handle == handle %}
+                            {% assign product = product %}
+                          {% endif %}
+                        {% endfor %}
                       {%- assign feature_image = block.settings.shop_img44 -%}
-                      {% include 'custom-collection-grid-item' %}
+                        {% include 'custom-collection-grid-item' %}            
                   {%- endcase -%}
                   </div>
             	</div>
