--- a/sections/custom-collection-2.liquid
+++ b/sections/custom-collection-2.liquid
@@ -304,6 +304,7 @@
                           {% endif %}
                         {% endfor %}
                     	{%- assign feature_image = block.settings.shop_img44 -%}
+                        {% include 'custom-collection-grid-item' %}
                   {%- endcase -%}
                   </div>
             	</div>
