Hide old hero temp via CSS

--- a/assets/new-home-page.scss.liquid
+++ b/assets/new-home-page.scss.liquid
@@ -1,3 +1,9 @@
+// EvenVision temporary addition to hide old homepage hero image via CSS
+
+.template-index .image-overlay {
+    display:none;
+}
+
 // NEW HOME PAGE
 .hidden-hover {
     overflow: hidden;
