--- a/assets/new-home-page.scss.liquid
+++ b/assets/new-home-page.scss.liquid
@@ -1,6 +1,6 @@
 // EvenVision temporary addition to hide old homepage hero image via CSS
 
-.template-index .image-overlay {
+.template-index .shopify-section-index-banner-image {
     display:none;
 }
 
