More hiding content...

--- a/assets/new-home-page.scss.liquid
+++ b/assets/new-home-page.scss.liquid
@@ -4,6 +4,11 @@
     display:none;
 }
 
+.template-index .background-size-cover.lazyloaded {
+    display:none;
+}
+
+
 // NEW HOME PAGE
 .hidden-hover {
     overflow: hidden;
