--- a/assets/theme.scss
+++ b/assets/theme.scss
@@ -6,13 +6,15 @@
 // EvenVision temporary addition to hide old homepage hero image via CSS
 
 .template-index .shopify-section-index-banner-image {
-    display:none !important;
+    display:none;
+    position: absolute;
+    left: -100000px;
 }
-
-
 
 .template-index .background-size-cover.lazyloaded {
     display:none;
+    position: absolute;
+    left: -100000px;
 }
 
 
