Bug fixes: redesigned 'new-releases', 'block with reviews' block, added links, look at fonts

--- a/assets/new-home-page.scss.liquid
+++ b/assets/new-home-page.scss.liquid
@@ -866,6 +866,10 @@
         margin-bottom: 113px;
     }
 
+    .swiper-slide {
+        max-height: inherit !important;
+    }
+
     .reviews-slider__mw {
         background: #F4F5F6;
         max-width: 852px;
