Bug fixes: Centered the description in the quote

--- a/assets/new-home-page.scss.liquid
+++ b/assets/new-home-page.scss.liquid
@@ -916,7 +916,7 @@
             }
 
             @media (min-width: 991px) {
-                top: 55px;
+                top: 70px;
             }
         }
 
@@ -999,6 +999,8 @@
 
             .reviews-slider__description {
                 min-height: 118px;
+                display: flex;
+                align-items: center;
 
                 @media (min-width: 481px) {
                     min-height: 155px;
