--- a/assets/new-home-page.scss.liquid
+++ b/assets/new-home-page.scss.liquid
@@ -794,6 +794,23 @@
             display: flex;
             align-items: center;
             width: 100%;
+            overflow: hidden;
+
+            .hidden-hover {
+                width: 100%;
+                height: 100%;
+                display: block;
+            }
+
+            img {
+                transition: all 1.5s ease-in-out;
+            }
+
+            &:hover {
+                img {
+                    transform: scale(1.15);
+                }
+            }
         }
 
         .eterne-girls__left {
